Move svg defs out of view class to avoid duplication.

--- a/calendar.css
+++ b/calendar.css
@@ -64,7 +64,7 @@ c-e {
     display: inline-flex;
 }
 
-.view > svg {
+body > svg {
     display: none;
 }
 
